icon alignment issues fixed.  new icon file with farther-apart icons.  contentPanel showing comment icon only on items with comments.

--- a/rb/templates/widget.css
+++ b/rb/templates/widget.css
@@ -228,7 +228,7 @@ border-color:transparent #80aec9 transparent transparent; border-style:solid; bo
     margin-left: 4px;
     margin-top: 1px;
     position: absolute;
-    width:160px;
+    width:100%;
 }
 
 #rdr_sandbox div.rdr_window div.rdr_contentPanel div.rdr_headerInnerWrap h2{
@@ -405,7 +405,7 @@ border-style: solid !important; border-width: 1px 0 !important; padding: 0 !impo
 /*overwrite for image readmode version*/
 div.rdr .rdr_image_reactions .rdr_read .rdr_rightBox {background: none !important;}
 
-#rdr_sandbox div.rdr ul.rdr_tags li.rdr_has_comment .rdr_rightBox     {background:url({{ STATIC_URL }}widget/images/widget_icons.png) -107px -1px no-repeat;}
+#rdr_sandbox div.rdr ul.rdr_tags li.rdr_has_comment .rdr_rightBox     {background:url({{ STATIC_URL }}widget/images/widget_icons.png) -165px -1px no-repeat;}
 #rdr_sandbox div.rdr div.rdr_read ul.rdr_tags li .rdr_leftBox     {color:#008be4;}
 
 #rdr_sandbox div.rdr ul.rdr_tags li.rdr_tagged div.rdr_leftBox   {background:url({{ STATIC_URL }}widget/images/widget_icons.png) 1px -1px no-repeat; }
@@ -414,9 +414,9 @@ div.rdr .rdr_image_reactions .rdr_read .rdr_rightBox {background: none !importan
 #rdr_sandbox div.rdr div.rdr_read ul.rdr_tags li:hover div.rdr_leftBox,
 #rdr_sandbox div.rdr div.rdr_read ul.rdr_tags li.rdr_tagged div.rdr_leftBox   {background-image:none; color:#008be4; }
 
-#rdr_sandbox div.rdr div.rdr_sentimentBox  ul.rdr_tags li:hover .rdr_rightBox {background:url({{ STATIC_URL }}widget/images/widget_icons.png) -142px -1px no-repeat;}
+#rdr_sandbox div.rdr div.rdr_sentimentBox  ul.rdr_tags li:hover .rdr_rightBox {background:url({{ STATIC_URL }}widget/images/widget_icons.png) -219px -1px no-repeat;}
 
-#rdr_sandbox div.rdr ul.rdr_tags li.rdr_selected .rdr_rightBox   {background:url({{ STATIC_URL }}widget/images/widget_icons.png) -36px -1px no-repeat !important;}
+#rdr_sandbox div.rdr ul.rdr_tags li.rdr_selected .rdr_rightBox   {background:url({{ STATIC_URL }}widget/images/widget_icons.png) -53px -1px no-repeat !important;}
 #rdr_sandbox div.rdr ul.rdr_tags li.rdr_selected .rdr_leftBox:hover,
 #rdr_sandbox div.rdr ul.rdr_tags li.rdr_tagged .rdr_leftBox:hover    {background-position:-70px -1px;}
 #rdr_sandbox div.rdr div.rdr_new ul.rdr_tags li.rdr_selected     {-moz-box-shadow:none;-webkit-box-shadow:none;box-shadow:none;}
@@ -485,10 +485,10 @@ div.rdr .rdr_image_reactions .rdr_read .rdr_rightBox {background: none !importan
     overflow: hidden;
     position: absolute;
     right: 5px;
-    width: 24px;
+    width: 38px;
 }
 #rdr_sandbox div.rdr div.rdr_contentSet.rdr_hover div.rdr_contentHeader div.rdr_rightBox {
-    background:url({{ STATIC_URL }}widget/images/widget_icons.png) -36px -10px no-repeat !important;
+    background:url({{ STATIC_URL }}widget/images/widget_icons.png) -43px -10px no-repeat !important;
     opacity:0.5;
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter:alpha(opacity=50);
@@ -499,7 +499,7 @@ div.rdr .rdr_image_reactions .rdr_read .rdr_rightBox {background: none !importan
 #rdr_sandbox div.rdr div.rdr_contentSet div.rdr_contentHeader a.rdr_tag              {margin:0; background:#ccc; font:inherit; color:#666; padding:0; }
 #rdr_sandbox div.rdr div.rdr_contentSet div.rdr_contentHeader a.rdr_tag:hover,
 #rdr_sandbox div.rdr div.rdr_contentSet div.rdr_contentHeader a.rdr_tag.rdr_hover                   {background:#fff; }
-#rdr_sandbox div.rdr div.rdr_contentSet div.rdr_contentHeader.rdr_has_comment div.rdr_rightBox      {background: url("{{ STATIC_URL }}widget/images/widget_icons.png") no-repeat scroll -95px -10px transparent; float:right; padding-left:16px; font-weight:normal; margin-right:5px; cursor:pointer;}
+#rdr_sandbox div.rdr div.rdr_contentSet div.rdr_contentHeader.rdr_has_comment div.rdr_rightBox      {background: url("{{ STATIC_URL }}widget/images/widget_icons.png") no-repeat scroll -155px -10px transparent; float:right; font-weight:normal; margin-right:5px; cursor:pointer;}
 #rdr_sandbox div.rdr div.rdr_contentSet div.rdr_contentHeader div.rdr_can_comment                   {background:none; float:right; font-weight:normal; margin-right:5px; text-transform:uppercase; font-size:9px; display:none; cursor:pointer; color:#666;}
 #rdr_sandbox div.rdr div.rdr_contentSet:hover div.rdr_contentHeader div.rdr_can_comment    {display:block;}
 #rdr_sandbox div.rdr div.rdr_contentSet div.rdr_content { color:#787878; font:italic 13px Georgia; padding:2px 9px; font-size:17px; }
